fixed modal spacing so that it starts at the top and left of the screen. Edited css in gallery for list images. added footer

--- a/css/catmode.css
+++ b/css/catmode.css
@@ -19,7 +19,6 @@
 }
 
 body {
-    margin: 0 auto;
     padding: 0 100px;
 }
 
@@ -38,12 +37,8 @@ main {
 .cat-container li img{
     height: 300px;
     width: 300px;
-    padding: 15px;
+    padding: 8px;
     box-shadow: rgba(0, 0, 0, 0.4) 1.95px 1.95px 4px;
-}
-
-img {
-    border-radius: 20px;
 }
 
 li :hover {
@@ -56,6 +51,7 @@ li :hover {
     z-index: 1; 
     padding-top: 100px;
     top: 0;
+    left: 0;
     width: 100%; 
     height: 100%;
     overflow: auto; 
