--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,5 @@
 * {
+    background-color: fffdfa;
     list-style-type: none;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -7,7 +8,6 @@
 .page-title {
     -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: #82177e;
-    /* color: antiquewhite; */
     text-align: left;
     font-family: 'Grenze Gotisch', sans-serif;
     font-weight: 600;
@@ -16,10 +16,12 @@
 
 body {
     margin: 0 auto;
-    background-color: #f6e7d6;
     padding: 0 100px;
 }
 
+main {
+    padding: 0 60px;
+}
 .cat-container {
     display: grid;
     object-fit: cover;
@@ -30,12 +32,8 @@ body {
 .cat-container li img{
     height: 300px;
     width: 300px;
-    padding: 15px;
+    padding: 8px;
     box-shadow: rgba(0, 0, 0, 0.4) 1.95px 1.95px 4px;
-}
-
-img {
-    border-radius: 20px;
 }
 
 li :hover {
@@ -48,6 +46,7 @@ li :hover {
     z-index: 1; 
     padding-top: 100px;
     top: 0;
+    left: 0;
     width: 100%; 
     height: 100%;
     overflow: auto; 
@@ -60,7 +59,9 @@ li :hover {
     padding: 0;
     width: 100%;
     max-width: 400px;
+    max-height: 600px;
 }
+
 
 .modal-content img {
     border: solid 5px #f7f1f1;
@@ -85,7 +86,17 @@ li :hover {
     height: auto;
 }
 
+button {
+    background-color: white;
+}
 
+footer {
+    padding: 30px 0;
+}
+
+footer p {
+    font-size: 10px;
+}
 
 @media screen and (max-width: 1200px) {
     .cat-container {
@@ -100,4 +111,7 @@ li :hover {
         flex-direction: column;
     }
     
+    .page-title {
+        font-size: 50px;
+    }
 }
